Fixed nav button spacing and missing account/signup on every page except index

--- a/app/assets/stylesheets/common/structure.css.sass
+++ b/app/assets/stylesheets/common/structure.css.sass
@@ -5,7 +5,7 @@ body
 
 #main-header
   background: palette(1, lighten, 25)
-  height: 80px
+  min-height: 80px
 
   a
     color: palette(2)
@@ -46,8 +46,7 @@ body
     float: right
     height: 35px
     line-height: 35px
-    margin-right: 10px
-    padding-bottom: 2px
+    margin: 0 10px 3px 0
     width: 65%
     a
       +hl-button
